Fri Jul 11 11:25:28 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: cleanup

Wed Jul  9 05:34:20 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/tds/token.c use locally provided server name correctly

Tue Jul  8 15:38:37 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c: don't dereference a NULL dbproc. 

Tue Jul  8 13:02:14 EDT 2008	JK Lowden <jklowden@freetds.org>
	* include/tds.h src/tds/token.c:
	- use locally provided server name if the error message
	- packet doesn't include one. 

Tue Jul 08 10:46:04 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/pool/stream.c: remove memory leak

Tue Jul 08 10:44:57 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: add new constants for mssql2005

Tue Jul 08 10:39:12 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/Makefile.am: make win32 happy

Mon Jul  7 17:42:00 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/ctlib/unittests/Makefile.am link statically

Mon Jul  7 14:27:28 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/apps/tsql.c added -v to print instance information

Mon Jul 07 15:16:09 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c: make it works with MS ODBC

Mon Jul 07 13:23:52 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/Makefile.am src/odbc/sql2tds.c:
	- start wchar support

Mon Jul 07 13:09:20 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/common.c: make portable to win32
	* src/odbc/prepare_query.c: add small comment

Sun Jul  6 12:25:38 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/ctlib/unittests/Makefile.am src/ctlib/unittests/common.c
	* src/ctlib/unittests/common.h
	- unit tests accept command-line options
	* src/ctlib/unittests/datafmt.c added

Sat Jul  5 18:52:45 EDT 2008	JK Lowden <jklowden@freetds.org>
	* include/cspublic.h src/ctlib/cs.c src/ctlib/ct.c